@@ -76,11 +76,11 @@ LogLevel = "10"
 ; installation or on the Bumblebee website. If you choose a locale that doesn't exist,
 ; you'll get the interface in English.
 ;locale = "de_DE"
-locale = "en_US"
+locale = "en_GB"
 ; Path to the translation files. This can usually be a relative path, but you
 ; might need to specify an absolute path if you're having troubles.
 translation_base = "./locale/"
-; Timezone with in which the instruments reside (i.e., when you say tomorrow, what do you mean)
+; Time zone in which the instruments reside (i.e., when you say tomorrow, what do you mean)
 ; For a list of acceptable values, please see
 ;       http://php.net/manual/en/timezones.php
 timezone = "Europe/London"
@@ -157,7 +157,8 @@ server_signature = true
 ; extra information to display on the login page (e.g. secured by, check the certificate)
 ; note that you have to use only single quotes (') within the HTML snippet
 ; and surround the entire thing in double quotes (") otherwise you'll get very strange results
-LoginPage = ""
+LoginPage = 
+;LoginPage = "<div style='float:right; margin-top:2em; padding: 1em; width:14em; border:1px solid black'>Alternatively, you can <a href='?anonymous'>browse instruments and calendars</a></div>"
 ;
 ; ------------ Anonymous or read-only browsing of bookings ----------------
 ; By appending ?anonymous to the base URL of the system, you will be logged in automatically
@@ -215,12 +216,12 @@ LDAPPassToken = "--ldap-auth-user"
 ; ========== ADVANCED FUNCTIONS ==============
 ; Turn on these advanced functions ONLY if you need them to debug authentication problems
 ; or to recover a lost admin password.
-authAdvancedSecurityHole = false
+authAdvancedSecurityHole = true
 ;
 ; Include verbose error messages as to why the login failed (e.g. "Login failed: username unknown")
 ; rather than just the generic "Login failed" message. Note that turning on these messages reveals
 ; more about your internal setup and so should not be done in a production environment.
-verboseFailure = false
+verboseFailure = true
 ; Force all login attempts to be successful regardless of whether the correct password was given
 ; (allows forgotten admin passwords to be retrieved). Note that you NEVER want to turn this on in
 ; a production environment!
