@@ -9,7 +9,7 @@ host = "localhost"
 ; username for MySQL connections
 username = "bumblebee"
 ; password for MySQL connections
-passwd = "BABSuser123"
+passwd = "bumblebeepass"
 ; the database that will be used for storing all Bumblebee data
 database = "bumblebeedb"
 ; the prefix that will be added to all table names (allows you to share databases if you
